--- a/_sass/dark_theme.scss
+++ b/_sass/dark_theme.scss
@@ -8,6 +8,7 @@ html[data-theme="dark"] {
   --cookies-text-color: #{$white};
   --fav-button-color: #{$white};
   --link-color: #{$primary-300};
+  --scroll-bar-background-color: #{$gray-700};
   --searchbar-background-color: #{$gray-700};
   --searchbar-text-color: #{$white};
   --tags-filter-background-color: #{$gray-700};
