--- a/_sass/light_theme.scss
+++ b/_sass/light_theme.scss
@@ -8,6 +8,7 @@ html[data-theme="light"] {
   --cookies-text-color: #{$black};
   --fav-button-color: #{$primary-500};
   --link-color: #{$primary-300};
+  --scroll-bar-background-color: #{$gray-100};
   --searchbar-background-color: #{$gray-100};
   --searchbar-text-color: #{$black};
   --tags-filter-background-color: #{$white};
